--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -159,6 +159,13 @@ body.pink_2 {
   background: linear-gradient(#3c333c, #282528);
   /* Standard syntax */ }
 
+/* Secret Stuff! */
+.secret_00 {
+  background-image: url("/chiasmata/images/etc/clue_00.png");
+  background-repeat: no-repeat;
+  background-position: calc(50% + 650px) 450px;
+  background-size: 210px 210px; }
+
 /* content */
 body.pink .content {
   background-color: #351e36; }
