Adjusting and adding pages.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,6 +166,12 @@ body.pink_2 {
   background-position: calc(50% + 650px) 450px;
   background-size: 210px 210px; }
 
+.secret_01 {
+  background-image: url("/chiasmata/images/etc/clue_01.png");
+  background-repeat: no-repeat;
+  background-position: calc(50% + 600px) 950px;
+  background-size: 210px 210px; }
+
 /* content */
 body.pink .content {
   background-color: #351e36; }
