--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,8 +23,7 @@ nav {
   font-family: 'Roboto', sans-serif;
   margin: auto;
   font-size: 20px;
-  max-width: 1000px;
-  min-width: 800px; }
+  max-width: 1000px; }
 
 .navbutton {
   font-family: inherit;
@@ -50,6 +49,14 @@ nav span {
   padding-right: 40px;
   padding-top: 5px; }
 
+@media screen and (max-width: 800px) {
+  #rightlinks {
+    clear: both;
+    float: none;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    padding: 5px 0; } }
 /* Dropdowns */
 /* Style The Dropdown Button */
 .dropbtn {
@@ -379,6 +386,10 @@ a.current {
   text-align: center;
   padding: 14px 0; }
 
+#page .center-image {
+  margin: 0 auto;
+  display: block; }
+
 .center-image {
   margin: 0 auto;
   display: block; }
@@ -440,152 +451,152 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(52px, 9999px, 14px, 0);
-    transform: skew(0.49deg); }
+    clip: rect(14px, 9999px, 56px, 0);
+    transform: skew(0.6deg); }
   5% {
-    clip: rect(24px, 9999px, 70px, 0);
-    transform: skew(0.88deg); }
-  10% {
-    clip: rect(65px, 9999px, 13px, 0);
+    clip: rect(35px, 9999px, 68px, 0);
     transform: skew(0.84deg); }
+  10% {
+    clip: rect(67px, 9999px, 66px, 0);
+    transform: skew(0.28deg); }
   15% {
-    clip: rect(37px, 9999px, 43px, 0);
+    clip: rect(5px, 9999px, 2px, 0);
     transform: skew(0.79deg); }
   20% {
-    clip: rect(36px, 9999px, 41px, 0);
-    transform: skew(0.79deg); }
+    clip: rect(98px, 9999px, 58px, 0);
+    transform: skew(0.3deg); }
   25% {
-    clip: rect(47px, 9999px, 94px, 0);
-    transform: skew(0.44deg); }
+    clip: rect(65px, 9999px, 66px, 0);
+    transform: skew(0.83deg); }
   30% {
-    clip: rect(95px, 9999px, 43px, 0);
-    transform: skew(0.99deg); }
+    clip: rect(23px, 9999px, 74px, 0);
+    transform: skew(0.75deg); }
   35% {
-    clip: rect(18px, 9999px, 15px, 0);
-    transform: skew(0.96deg); }
+    clip: rect(72px, 9999px, 6px, 0);
+    transform: skew(0.18deg); }
   40% {
-    clip: rect(85px, 9999px, 64px, 0);
-    transform: skew(0.87deg); }
+    clip: rect(3px, 9999px, 96px, 0);
+    transform: skew(0.06deg); }
   45% {
-    clip: rect(59px, 9999px, 18px, 0);
-    transform: skew(0.68deg); }
-  50% {
-    clip: rect(38px, 9999px, 50px, 0);
-    transform: skew(0.72deg); }
-  55% {
-    clip: rect(2px, 9999px, 70px, 0);
-    transform: skew(0.43deg); }
-  60% {
-    clip: rect(15px, 9999px, 13px, 0);
-    transform: skew(0.6deg); }
-  65% {
-    clip: rect(89px, 9999px, 2px, 0);
-    transform: skew(0.51deg); }
-  70% {
-    clip: rect(26px, 9999px, 32px, 0);
-    transform: skew(0.31deg); }
-  75% {
-    clip: rect(26px, 9999px, 86px, 0);
-    transform: skew(0.84deg); }
-  80% {
-    clip: rect(73px, 9999px, 39px, 0);
-    transform: skew(0.94deg); }
-  85% {
-    clip: rect(52px, 9999px, 74px, 0);
-    transform: skew(0.25deg); }
-  90% {
-    clip: rect(45px, 9999px, 74px, 0);
+    clip: rect(92px, 9999px, 67px, 0);
     transform: skew(0.38deg); }
+  50% {
+    clip: rect(96px, 9999px, 27px, 0);
+    transform: skew(0.61deg); }
+  55% {
+    clip: rect(52px, 9999px, 35px, 0);
+    transform: skew(0.76deg); }
+  60% {
+    clip: rect(61px, 9999px, 43px, 0);
+    transform: skew(0.4deg); }
+  65% {
+    clip: rect(91px, 9999px, 58px, 0);
+    transform: skew(0.25deg); }
+  70% {
+    clip: rect(83px, 9999px, 92px, 0);
+    transform: skew(0.73deg); }
+  75% {
+    clip: rect(80px, 9999px, 20px, 0);
+    transform: skew(1deg); }
+  80% {
+    clip: rect(21px, 9999px, 97px, 0);
+    transform: skew(0.45deg); }
+  85% {
+    clip: rect(5px, 9999px, 22px, 0);
+    transform: skew(0.82deg); }
+  90% {
+    clip: rect(82px, 9999px, 6px, 0);
+    transform: skew(0.8deg); }
   95% {
-    clip: rect(46px, 9999px, 13px, 0);
-    transform: skew(0.74deg); }
+    clip: rect(27px, 9999px, 38px, 0);
+    transform: skew(0.83deg); }
   100% {
-    clip: rect(80px, 9999px, 79px, 0);
-    transform: skew(0.09deg); } }
+    clip: rect(50px, 9999px, 23px, 0);
+    transform: skew(0.17deg); } }
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(10px, 9999px, 63px, 0);
-    transform: skew(0.28deg); }
+    clip: rect(22px, 9999px, 96px, 0);
+    transform: skew(0.46deg); }
   5% {
-    clip: rect(45px, 9999px, 83px, 0);
-    transform: skew(0.47deg); }
+    clip: rect(66px, 9999px, 20px, 0);
+    transform: skew(0.42deg); }
   10% {
-    clip: rect(40px, 9999px, 4px, 0);
-    transform: skew(0.2deg); }
+    clip: rect(9px, 9999px, 85px, 0);
+    transform: skew(0.95deg); }
   15% {
-    clip: rect(2px, 9999px, 85px, 0);
-    transform: skew(0.63deg); }
+    clip: rect(6px, 9999px, 53px, 0);
+    transform: skew(0.47deg); }
   20% {
-    clip: rect(91px, 9999px, 81px, 0);
-    transform: skew(0.11deg); }
+    clip: rect(56px, 9999px, 68px, 0);
+    transform: skew(0.78deg); }
   25% {
-    clip: rect(7px, 9999px, 66px, 0);
-    transform: skew(0.1deg); }
+    clip: rect(32px, 9999px, 9px, 0);
+    transform: skew(0.05deg); }
   30% {
-    clip: rect(60px, 9999px, 54px, 0);
-    transform: skew(0.54deg); }
+    clip: rect(72px, 9999px, 91px, 0);
+    transform: skew(0.86deg); }
   35% {
-    clip: rect(66px, 9999px, 17px, 0);
-    transform: skew(0.91deg); }
+    clip: rect(85px, 9999px, 38px, 0);
+    transform: skew(0.3deg); }
   40% {
-    clip: rect(68px, 9999px, 98px, 0);
-    transform: skew(0.94deg); }
+    clip: rect(54px, 9999px, 80px, 0);
+    transform: skew(1deg); }
   45% {
-    clip: rect(73px, 9999px, 64px, 0);
-    transform: skew(0.02deg); }
+    clip: rect(81px, 9999px, 64px, 0);
+    transform: skew(0.85deg); }
   50% {
-    clip: rect(57px, 9999px, 30px, 0);
-    transform: skew(0.89deg); }
+    clip: rect(57px, 9999px, 27px, 0);
+    transform: skew(0.27deg); }
   55% {
-    clip: rect(94px, 9999px, 62px, 0);
-    transform: skew(0.23deg); }
+    clip: rect(27px, 9999px, 29px, 0);
+    transform: skew(0.21deg); }
   60% {
-    clip: rect(11px, 9999px, 58px, 0);
-    transform: skew(0.37deg); }
+    clip: rect(93px, 9999px, 76px, 0);
+    transform: skew(0.1deg); }
   65% {
-    clip: rect(63px, 9999px, 51px, 0);
-    transform: skew(0.69deg); }
+    clip: rect(22px, 9999px, 73px, 0);
+    transform: skew(0.46deg); }
   70% {
-    clip: rect(64px, 9999px, 59px, 0);
-    transform: skew(0.7deg); }
+    clip: rect(67px, 9999px, 47px, 0);
+    transform: skew(0.55deg); }
   75% {
-    clip: rect(72px, 9999px, 10px, 0);
-    transform: skew(0.07deg); }
-  80% {
-    clip: rect(93px, 9999px, 88px, 0);
-    transform: skew(0.9deg); }
-  85% {
-    clip: rect(62px, 9999px, 71px, 0);
-    transform: skew(0.83deg); }
-  90% {
-    clip: rect(39px, 9999px, 16px, 0);
-    transform: skew(0.26deg); }
-  95% {
-    clip: rect(38px, 9999px, 67px, 0);
+    clip: rect(72px, 9999px, 25px, 0);
     transform: skew(0.12deg); }
+  80% {
+    clip: rect(98px, 9999px, 59px, 0);
+    transform: skew(0.37deg); }
+  85% {
+    clip: rect(26px, 9999px, 66px, 0);
+    transform: skew(0.13deg); }
+  90% {
+    clip: rect(9px, 9999px, 40px, 0);
+    transform: skew(0.72deg); }
+  95% {
+    clip: rect(75px, 9999px, 4px, 0);
+    transform: skew(0.98deg); }
   100% {
-    clip: rect(29px, 9999px, 48px, 0);
-    transform: skew(0.02deg); } }
+    clip: rect(45px, 9999px, 60px, 0);
+    transform: skew(0.27deg); } }
 @keyframes glitch-skew {
   0% {
-    transform: skew(-3deg); }
+    transform: skew(3deg); }
   10% {
-    transform: skew(4deg); }
-  20% {
-    transform: skew(5deg); }
-  30% {
-    transform: skew(5deg); }
-  40% {
-    transform: skew(-3deg); }
-  50% {
     transform: skew(-2deg); }
-  60% {
+  20% {
     transform: skew(4deg); }
-  70% {
-    transform: skew(-4deg); }
-  80% {
-    transform: skew(2deg); }
-  90% {
+  30% {
+    transform: skew(-3deg); }
+  40% {
+    transform: skew(3deg); }
+  50% {
     transform: skew(0deg); }
+  60% {
+    transform: skew(0deg); }
+  70% {
+    transform: skew(0deg); }
+  80% {
+    transform: skew(3deg); }
+  90% {
+    transform: skew(-3deg); }
   100% {
-    transform: skew(1deg); } }
+    transform: skew(4deg); } }
