Fixing text sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,19 @@
 body {
-  /*font-family: "Lucida Grande", "Trebuchet MS", Helvetica, Arial, sans-serif;*/
   color: #ffffff;
   margin: 0;
   font-family: "courier", "monospace";
+  font-size: 1em;
   background-color: #535353; }
 
+@media (orientation: portrait) and (max-width: 850px) {
+  body, .navbutton, .dropbtn {
+    font-size: 2em; }
+
+  nav {
+    font-size: 2.25em; }
+
+  #page.small {
+    font-size: 1.5em; } }
 /* NAVBAR STUFF */
 #navbar {
   background-color: #0C0C0C;
@@ -22,12 +31,12 @@ nav {
   color: #ffffff;
   font-family: 'Roboto', sans-serif;
   margin: auto;
-  font-size: 20px;
+  font-size: 1.25em;
   max-width: 1000px; }
 
 .navbutton {
   font-family: inherit;
-  font-size: 20px;
+  font-size: 1em;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: black;
@@ -49,7 +58,7 @@ nav span {
   padding-right: 40px;
   padding-top: 5px; }
 
-@media screen and (max-width: 800px) {
+@media (orientation: portrait) and (max-width: 850px) {
   #rightlinks {
     clear: both;
     float: none;
@@ -61,7 +70,7 @@ nav span {
 /* Style The Dropdown Button */
 .dropbtn {
   font-family: inherit;
-  font-size: 20px;
+  font-size: 1em;
   padding-top: 10px;
   padding-bottom: 10px;
   color: inherit;
@@ -123,7 +132,7 @@ nav span {
   clear: both; }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 850px) {
   .column {
     float: left;
     width: 33.33%;
@@ -359,7 +368,7 @@ a.current {
   font-family: 'Courier New', Courier, monospace; }
 
 #page .small {
-  font-size: 10px; }
+  font-size: 0.5em; }
 
 .blink_me {
   animation: blinker 1s step-start infinite; }
@@ -451,152 +460,152 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(24px, 9999px, 47px, 0);
-    transform: skew(0.92deg); }
+    clip: rect(33px, 9999px, 67px, 0);
+    transform: skew(0.28deg); }
   5% {
-    clip: rect(70px, 9999px, 3px, 0);
-    transform: skew(0.07deg); }
+    clip: rect(76px, 9999px, 9px, 0);
+    transform: skew(0.75deg); }
   10% {
-    clip: rect(97px, 9999px, 33px, 0);
-    transform: skew(0.24deg); }
+    clip: rect(70px, 9999px, 94px, 0);
+    transform: skew(0.44deg); }
   15% {
-    clip: rect(6px, 9999px, 48px, 0);
-    transform: skew(0.59deg); }
+    clip: rect(45px, 9999px, 30px, 0);
+    transform: skew(0.56deg); }
   20% {
-    clip: rect(46px, 9999px, 12px, 0);
-    transform: skew(0.58deg); }
+    clip: rect(57px, 9999px, 90px, 0);
+    transform: skew(0.95deg); }
   25% {
-    clip: rect(11px, 9999px, 63px, 0);
-    transform: skew(0.66deg); }
+    clip: rect(50px, 9999px, 19px, 0);
+    transform: skew(0.55deg); }
   30% {
-    clip: rect(80px, 9999px, 98px, 0);
-    transform: skew(0.31deg); }
+    clip: rect(96px, 9999px, 91px, 0);
+    transform: skew(0.59deg); }
   35% {
-    clip: rect(81px, 9999px, 89px, 0);
-    transform: skew(0.35deg); }
+    clip: rect(52px, 9999px, 80px, 0);
+    transform: skew(0.88deg); }
   40% {
-    clip: rect(88px, 9999px, 77px, 0);
-    transform: skew(0.06deg); }
+    clip: rect(78px, 9999px, 90px, 0);
+    transform: skew(0.83deg); }
   45% {
-    clip: rect(93px, 9999px, 24px, 0);
-    transform: skew(0.35deg); }
+    clip: rect(85px, 9999px, 63px, 0);
+    transform: skew(0.58deg); }
   50% {
-    clip: rect(63px, 9999px, 24px, 0);
-    transform: skew(0.38deg); }
-  55% {
-    clip: rect(25px, 9999px, 87px, 0);
+    clip: rect(66px, 9999px, 91px, 0);
     transform: skew(0.45deg); }
+  55% {
+    clip: rect(49px, 9999px, 25px, 0);
+    transform: skew(0.54deg); }
   60% {
-    clip: rect(23px, 9999px, 51px, 0);
-    transform: skew(0.14deg); }
+    clip: rect(70px, 9999px, 21px, 0);
+    transform: skew(0.56deg); }
   65% {
-    clip: rect(18px, 9999px, 90px, 0);
-    transform: skew(0.94deg); }
+    clip: rect(66px, 9999px, 13px, 0);
+    transform: skew(0.57deg); }
   70% {
-    clip: rect(43px, 9999px, 83px, 0);
-    transform: skew(0.49deg); }
+    clip: rect(73px, 9999px, 64px, 0);
+    transform: skew(0.8deg); }
   75% {
-    clip: rect(42px, 9999px, 86px, 0);
-    transform: skew(0.68deg); }
+    clip: rect(25px, 9999px, 82px, 0);
+    transform: skew(0.71deg); }
   80% {
-    clip: rect(73px, 9999px, 24px, 0);
-    transform: skew(0.61deg); }
+    clip: rect(71px, 9999px, 27px, 0);
+    transform: skew(0.07deg); }
   85% {
-    clip: rect(93px, 9999px, 23px, 0);
-    transform: skew(0.27deg); }
+    clip: rect(19px, 9999px, 88px, 0);
+    transform: skew(0.85deg); }
   90% {
-    clip: rect(25px, 9999px, 1px, 0);
-    transform: skew(0.86deg); }
+    clip: rect(4px, 9999px, 2px, 0);
+    transform: skew(0.04deg); }
   95% {
-    clip: rect(47px, 9999px, 60px, 0);
-    transform: skew(0.51deg); }
+    clip: rect(20px, 9999px, 15px, 0);
+    transform: skew(0.65deg); }
   100% {
-    clip: rect(94px, 9999px, 47px, 0);
-    transform: skew(0.7deg); } }
+    clip: rect(45px, 9999px, 5px, 0);
+    transform: skew(0.09deg); } }
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(22px, 9999px, 28px, 0);
-    transform: skew(0.27deg); }
+    clip: rect(67px, 9999px, 75px, 0);
+    transform: skew(0.33deg); }
   5% {
-    clip: rect(98px, 9999px, 66px, 0);
-    transform: skew(0.2deg); }
-  10% {
-    clip: rect(79px, 9999px, 59px, 0);
-    transform: skew(0.23deg); }
-  15% {
-    clip: rect(92px, 9999px, 46px, 0);
-    transform: skew(0.57deg); }
-  20% {
-    clip: rect(81px, 9999px, 21px, 0);
-    transform: skew(0.97deg); }
-  25% {
-    clip: rect(29px, 9999px, 44px, 0);
-    transform: skew(0.28deg); }
-  30% {
-    clip: rect(39px, 9999px, 5px, 0);
-    transform: skew(0.56deg); }
-  35% {
-    clip: rect(83px, 9999px, 4px, 0);
+    clip: rect(43px, 9999px, 80px, 0);
     transform: skew(0.82deg); }
-  40% {
-    clip: rect(48px, 9999px, 9px, 0);
-    transform: skew(0.72deg); }
-  45% {
-    clip: rect(45px, 9999px, 88px, 0);
-    transform: skew(0.06deg); }
-  50% {
-    clip: rect(43px, 9999px, 20px, 0);
-    transform: skew(0.24deg); }
-  55% {
-    clip: rect(51px, 9999px, 35px, 0);
+  10% {
+    clip: rect(92px, 9999px, 33px, 0);
+    transform: skew(0.11deg); }
+  15% {
+    clip: rect(61px, 9999px, 23px, 0);
+    transform: skew(0.53deg); }
+  20% {
+    clip: rect(51px, 9999px, 68px, 0);
+    transform: skew(0.64deg); }
+  25% {
+    clip: rect(94px, 9999px, 53px, 0);
+    transform: skew(0.75deg); }
+  30% {
+    clip: rect(62px, 9999px, 54px, 0);
     transform: skew(0.2deg); }
-  60% {
-    clip: rect(51px, 9999px, 56px, 0);
-    transform: skew(0.7deg); }
-  65% {
-    clip: rect(19px, 9999px, 82px, 0);
-    transform: skew(0.86deg); }
-  70% {
-    clip: rect(9px, 9999px, 73px, 0);
-    transform: skew(0.03deg); }
-  75% {
-    clip: rect(84px, 9999px, 79px, 0);
-    transform: skew(0.22deg); }
-  80% {
-    clip: rect(50px, 9999px, 63px, 0);
+  35% {
+    clip: rect(52px, 9999px, 56px, 0);
     transform: skew(0.49deg); }
-  85% {
-    clip: rect(75px, 9999px, 96px, 0);
-    transform: skew(0.73deg); }
-  90% {
-    clip: rect(94px, 9999px, 20px, 0);
-    transform: skew(0.01deg); }
-  95% {
-    clip: rect(100px, 9999px, 77px, 0);
+  40% {
+    clip: rect(11px, 9999px, 68px, 0);
+    transform: skew(0.93deg); }
+  45% {
+    clip: rect(89px, 9999px, 70px, 0);
+    transform: skew(0.52deg); }
+  50% {
+    clip: rect(12px, 9999px, 45px, 0);
+    transform: skew(0.08deg); }
+  55% {
+    clip: rect(17px, 9999px, 87px, 0);
     transform: skew(0.59deg); }
+  60% {
+    clip: rect(45px, 9999px, 100px, 0);
+    transform: skew(0.68deg); }
+  65% {
+    clip: rect(60px, 9999px, 29px, 0);
+    transform: skew(0.73deg); }
+  70% {
+    clip: rect(54px, 9999px, 75px, 0);
+    transform: skew(0.23deg); }
+  75% {
+    clip: rect(19px, 9999px, 17px, 0);
+    transform: skew(0.75deg); }
+  80% {
+    clip: rect(9px, 9999px, 52px, 0);
+    transform: skew(0.9deg); }
+  85% {
+    clip: rect(84px, 9999px, 60px, 0);
+    transform: skew(0.33deg); }
+  90% {
+    clip: rect(64px, 9999px, 11px, 0);
+    transform: skew(0.04deg); }
+  95% {
+    clip: rect(20px, 9999px, 42px, 0);
+    transform: skew(0.9deg); }
   100% {
-    clip: rect(65px, 9999px, 97px, 0);
-    transform: skew(0.04deg); } }
+    clip: rect(49px, 9999px, 59px, 0);
+    transform: skew(0.69deg); } }
 @keyframes glitch-skew {
   0% {
-    transform: skew(-1deg); }
+    transform: skew(0deg); }
   10% {
-    transform: skew(1deg); }
+    transform: skew(0deg); }
   20% {
-    transform: skew(-3deg); }
+    transform: skew(5deg); }
   30% {
-    transform: skew(2deg); }
+    transform: skew(-3deg); }
   40% {
     transform: skew(-2deg); }
   50% {
-    transform: skew(-2deg); }
+    transform: skew(5deg); }
   60% {
-    transform: skew(-3deg); }
+    transform: skew(-4deg); }
   70% {
-    transform: skew(4deg); }
+    transform: skew(5deg); }
   80% {
-    transform: skew(0deg); }
+    transform: skew(1deg); }
   90% {
-    transform: skew(-3deg); }
+    transform: skew(2deg); }
   100% {
     transform: skew(3deg); } }
