--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -670,6 +670,7 @@ text set in the data-text attribute. */
   for more information on how to random skew. */
   animation: glitch-skew 1s infinite linear alternate-reverse;
 }
+
 .glitch::before {
   content: attr(data-text);
   position: absolute;
@@ -687,6 +688,7 @@ text set in the data-text attribute. */
   with an alternating animation to keep things fresh. */
   animation: glitch-anim 5s infinite linear alternate-reverse;
 }
+
 .glitch::after {
   content: attr(data-text);
   position: absolute;
@@ -699,215 +701,215 @@ text set in the data-text attribute. */
   animation: glitch-anim2 1s infinite linear alternate-reverse;
 }
 
-/* Creates an animation with 20 steaps. For each step, it calculates 
+/* Animation with 20 steaps. For each step, it calculates 
 a percentage for the specific step. It then generates a random clip
 box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(77px, 9999px, 11px, 0);
-    transform: skew(0.06deg);
+    clip: rect(12px, 9999px, 70px, 0);
+    transform: skew(0.37deg);
   }
   5% {
-    clip: rect(31px, 9999px, 30px, 0);
-    transform: skew(0.53deg);
+    clip: rect(41px, 9999px, 29px, 0);
+    transform: skew(0.51deg);
   }
   10% {
-    clip: rect(86px, 9999px, 65px, 0);
-    transform: skew(0.75deg);
-  }
-  15% {
-    clip: rect(47px, 9999px, 68px, 0);
-    transform: skew(0.14deg);
-  }
-  20% {
-    clip: rect(40px, 9999px, 5px, 0);
-    transform: skew(0.45deg);
-  }
-  25% {
-    clip: rect(50px, 9999px, 26px, 0);
-    transform: skew(0.82deg);
-  }
-  30% {
-    clip: rect(72px, 9999px, 86px, 0);
-    transform: skew(0.76deg);
-  }
-  35% {
-    clip: rect(49px, 9999px, 61px, 0);
-    transform: skew(0.89deg);
-  }
-  40% {
-    clip: rect(56px, 9999px, 90px, 0);
-    transform: skew(0.57deg);
-  }
-  45% {
-    clip: rect(25px, 9999px, 48px, 0);
-    transform: skew(0.82deg);
-  }
-  50% {
-    clip: rect(50px, 9999px, 39px, 0);
+    clip: rect(15px, 9999px, 82px, 0);
     transform: skew(0.66deg);
   }
-  55% {
-    clip: rect(35px, 9999px, 92px, 0);
-    transform: skew(0.89deg);
+  15% {
+    clip: rect(90px, 9999px, 68px, 0);
+    transform: skew(0.61deg);
   }
-  60% {
-    clip: rect(52px, 9999px, 14px, 0);
-    transform: skew(0.58deg);
-  }
-  65% {
-    clip: rect(51px, 9999px, 59px, 0);
-    transform: skew(0.97deg);
-  }
-  70% {
-    clip: rect(80px, 9999px, 19px, 0);
-    transform: skew(0.84deg);
-  }
-  75% {
-    clip: rect(66px, 9999px, 13px, 0);
-    transform: skew(0.62deg);
-  }
-  80% {
-    clip: rect(42px, 9999px, 46px, 0);
+  20% {
+    clip: rect(14px, 9999px, 42px, 0);
     transform: skew(0.53deg);
   }
-  85% {
-    clip: rect(33px, 9999px, 89px, 0);
-    transform: skew(0.44deg);
+  25% {
+    clip: rect(37px, 9999px, 89px, 0);
+    transform: skew(0.65deg);
   }
-  90% {
-    clip: rect(51px, 9999px, 28px, 0);
+  30% {
+    clip: rect(41px, 9999px, 15px, 0);
+    transform: skew(0.92deg);
+  }
+  35% {
+    clip: rect(48px, 9999px, 84px, 0);
+    transform: skew(0.71deg);
+  }
+  40% {
+    clip: rect(7px, 9999px, 90px, 0);
+    transform: skew(0.62deg);
+  }
+  45% {
+    clip: rect(68px, 9999px, 83px, 0);
+    transform: skew(0.72deg);
+  }
+  50% {
+    clip: rect(5px, 9999px, 6px, 0);
+    transform: skew(0.85deg);
+  }
+  55% {
+    clip: rect(31px, 9999px, 73px, 0);
+    transform: skew(0.34deg);
+  }
+  60% {
+    clip: rect(47px, 9999px, 36px, 0);
+    transform: skew(0.43deg);
+  }
+  65% {
+    clip: rect(62px, 9999px, 8px, 0);
     transform: skew(0.77deg);
   }
+  70% {
+    clip: rect(7px, 9999px, 74px, 0);
+    transform: skew(0.82deg);
+  }
+  75% {
+    clip: rect(17px, 9999px, 71px, 0);
+    transform: skew(0.28deg);
+  }
+  80% {
+    clip: rect(4px, 9999px, 54px, 0);
+    transform: skew(0.01deg);
+  }
+  85% {
+    clip: rect(29px, 9999px, 25px, 0);
+    transform: skew(0.4deg);
+  }
+  90% {
+    clip: rect(69px, 9999px, 30px, 0);
+    transform: skew(0.68deg);
+  }
   95% {
-    clip: rect(83px, 9999px, 38px, 0);
-    transform: skew(0.47deg);
+    clip: rect(18px, 9999px, 15px, 0);
+    transform: skew(0.74deg);
   }
   100% {
-    clip: rect(91px, 9999px, 70px, 0);
-    transform: skew(0.33deg);
+    clip: rect(79px, 9999px, 51px, 0);
+    transform: skew(0.75deg);
   }
 }
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(12px, 9999px, 93px, 0);
-    transform: skew(0.06deg);
+    clip: rect(6px, 9999px, 43px, 0);
+    transform: skew(0.34deg);
   }
   5% {
-    clip: rect(84px, 9999px, 75px, 0);
-    transform: skew(0.26deg);
+    clip: rect(96px, 9999px, 27px, 0);
+    transform: skew(0.16deg);
   }
   10% {
-    clip: rect(98px, 9999px, 13px, 0);
-    transform: skew(0.54deg);
+    clip: rect(75px, 9999px, 35px, 0);
+    transform: skew(0.04deg);
   }
   15% {
-    clip: rect(61px, 9999px, 4px, 0);
-    transform: skew(0.47deg);
+    clip: rect(37px, 9999px, 18px, 0);
+    transform: skew(0.96deg);
   }
   20% {
-    clip: rect(49px, 9999px, 74px, 0);
-    transform: skew(0.26deg);
+    clip: rect(77px, 9999px, 48px, 0);
+    transform: skew(0.29deg);
   }
   25% {
-    clip: rect(2px, 9999px, 2px, 0);
-    transform: skew(0.9deg);
+    clip: rect(9px, 9999px, 83px, 0);
+    transform: skew(0.09deg);
   }
   30% {
-    clip: rect(8px, 9999px, 80px, 0);
-    transform: skew(0.61deg);
+    clip: rect(96px, 9999px, 39px, 0);
+    transform: skew(0.45deg);
   }
   35% {
-    clip: rect(53px, 9999px, 86px, 0);
-    transform: skew(0.05deg);
+    clip: rect(37px, 9999px, 66px, 0);
+    transform: skew(1deg);
   }
   40% {
-    clip: rect(20px, 9999px, 89px, 0);
-    transform: skew(0.84deg);
+    clip: rect(75px, 9999px, 60px, 0);
+    transform: skew(0.61deg);
   }
   45% {
-    clip: rect(74px, 9999px, 1px, 0);
-    transform: skew(0.64deg);
+    clip: rect(85px, 9999px, 84px, 0);
+    transform: skew(0.13deg);
   }
   50% {
-    clip: rect(49px, 9999px, 60px, 0);
-    transform: skew(0.59deg);
+    clip: rect(46px, 9999px, 84px, 0);
+    transform: skew(0.94deg);
   }
   55% {
-    clip: rect(65px, 9999px, 49px, 0);
-    transform: skew(0.18deg);
+    clip: rect(33px, 9999px, 59px, 0);
+    transform: skew(0.66deg);
   }
   60% {
-    clip: rect(60px, 9999px, 36px, 0);
-    transform: skew(0.38deg);
+    clip: rect(38px, 9999px, 37px, 0);
+    transform: skew(0.68deg);
   }
   65% {
-    clip: rect(48px, 9999px, 33px, 0);
-    transform: skew(0.02deg);
+    clip: rect(67px, 9999px, 65px, 0);
+    transform: skew(0.14deg);
   }
   70% {
-    clip: rect(13px, 9999px, 37px, 0);
-    transform: skew(0.49deg);
+    clip: rect(9px, 9999px, 18px, 0);
+    transform: skew(0.89deg);
   }
   75% {
-    clip: rect(61px, 9999px, 92px, 0);
-    transform: skew(0.62deg);
-  }
-  80% {
-    clip: rect(8px, 9999px, 26px, 0);
-    transform: skew(0.41deg);
-  }
-  85% {
-    clip: rect(72px, 9999px, 70px, 0);
-    transform: skew(0.55deg);
-  }
-  90% {
-    clip: rect(26px, 9999px, 2px, 0);
-    transform: skew(0.06deg);
-  }
-  95% {
-    clip: rect(70px, 9999px, 6px, 0);
+    clip: rect(49px, 9999px, 93px, 0);
     transform: skew(0.51deg);
   }
+  80% {
+    clip: rect(80px, 9999px, 81px, 0);
+    transform: skew(0.37deg);
+  }
+  85% {
+    clip: rect(2px, 9999px, 12px, 0);
+    transform: skew(0.87deg);
+  }
+  90% {
+    clip: rect(24px, 9999px, 4px, 0);
+    transform: skew(0.3deg);
+  }
+  95% {
+    clip: rect(22px, 9999px, 42px, 0);
+    transform: skew(0.87deg);
+  }
   100% {
-    clip: rect(72px, 9999px, 60px, 0);
-    transform: skew(0.71deg);
+    clip: rect(69px, 9999px, 14px, 0);
+    transform: skew(0.26deg);
   }
 }
 @keyframes glitch-skew {
   0% {
-    transform: skew(0deg);
-  }
-  10% {
-    transform: skew(-1deg);
-  }
-  20% {
     transform: skew(1deg);
   }
-  30% {
+  10% {
     transform: skew(-3deg);
   }
-  40% {
-    transform: skew(3deg);
-  }
-  50% {
-    transform: skew(3deg);
-  }
-  60% {
+  20% {
     transform: skew(-1deg);
   }
+  30% {
+    transform: skew(-1deg);
+  }
+  40% {
+    transform: skew(4deg);
+  }
+  50% {
+    transform: skew(-1deg);
+  }
+  60% {
+    transform: skew(-3deg);
+  }
   70% {
-    transform: skew(-2deg);
+    transform: skew(-1deg);
   }
   80% {
     transform: skew(-3deg);
   }
   90% {
-    transform: skew(5deg);
+    transform: skew(-3deg);
   }
   100% {
-    transform: skew(5deg);
+    transform: skew(-3deg);
   }
 }
 
