--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -522,6 +522,34 @@ a.current {
   margin: 5px;
 }
 
+.chromatic {
+  position: relative;
+  isolation: isolate;
+}
+.chromatic::before, .chromatic::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: lighten;
+  z-index: -1;
+  white-space: inherit;
+  word-break: inherit;
+  overflow-wrap: inherit;
+  hyphens: inherit;
+  opacity: 0.6;
+}
+.chromatic::before {
+  color: #00ffff;
+  transform: translate(-1px, -1px);
+}
+.chromatic::after {
+  color: #ff00ff;
+  transform: translate(1px, 1px);
+}
+
 .Sam {
   color: #006cff;
 }
@@ -655,6 +683,11 @@ a.current {
 
 .post-nav-next {
   text-align: right;
+}
+
+/* Chromatic aberration */
+.split {
+  text-shadow: -2px -2px 0 #ff00ff, 2px 2px 0 #00ffff;
 }
 
 /* Animation stuff? */
