--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -513,6 +513,16 @@ a.current {
   flex-grow: 1;
 }
 
+.archive-item {
+  display: flex;
+}
+
+.archive-date {
+  min-width: 10em;
+  flex-shrink: 0;
+  text-align: right;
+}
+
 .no-click {
   pointer-events: none;
 }
